fixed line spacing and padding

--- a/app/static/css/about.css
+++ b/app/static/css/about.css
@@ -4,6 +4,6 @@
 
 .about-section{
   padding-top: 3em;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 0em;
+  padding-right: 0em;
 }
