--- a/app/static/css/blog.css
+++ b/app/static/css/blog.css
@@ -1,7 +1,7 @@
 .blog-section{
-  padding-left: 2em;
+  padding-left: 0em;
   padding-top: 1em;
-  padding-right: 1em;
+  padding-right: 0em;
 }
 
 .blog-credits{
