--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -29,7 +29,7 @@
     font-size: 1.7em;
     margin-top: 0em;
     font-family: 'Josefin Slab', serif;
-    line-height: 1.5em;
+    line-height: 1.4em;
     color: #777;
   }
 }
@@ -39,7 +39,7 @@
     font-size: 1.7em;
     margin-top: 0em;
     font-family: 'Josefin Slab', serif;
-    line-height: 1.5em;
+    line-height: 1.4em;
     color: #777;
   }
 }
@@ -151,7 +151,7 @@
   margin-top: 1em;
   font-size: 1.2em;
   font-family: 'Josefin Slab', serif;
-  line-height: 1.2em;
+  line-height: 1.4em;
   color: #555;
   letter-spacing: .15em;
 }
