--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -45,7 +45,7 @@ hr#StyledHr:before {
   margin-top: 1.6em;
   font-size: 1.8em;
   font-family: 'Josefin Slab', serif;
-  line-height: 1.2em;
+  line-height: 1.4em;
   color: #555;
   letter-spacing: .15em;
 }
@@ -57,9 +57,9 @@ hr#StyledHr:before {
 }
 .section-text{
   margin-top: 1.6em;
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-family: 'Josefin Slab', serif;
-  line-height: 1.2em;
+  line-height: 1.4em;
   color: #111;
   letter-spacing: .15em;
 }
